infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.com
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: main-clusterip-srv
                port:
                  number: 5000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 5001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
